--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "node_js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.ts",
+    "start": "node app.js",
+    "dev": "nodemon --exec ts-node app.ts",
      "type": "module"
   },
   "keywords": [],
