--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node dist/app.js",
     "dev": "nodemon --exec ts-node app.ts",
      "build": "tsc",
      "type": "module"
