--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,14 @@
     /* Environment */
     "target": "ES2020",
     "lib": ["ES2020"],
+
+    /* Module system */
     "module": "CommonJS",
     "moduleResolution": "node",
+
+    /* Paths */
+    "rootDir": "src",
+    "outDir": "dist",
 
     /* Node compatibility */
     "esModuleInterop": true,
@@ -16,5 +22,7 @@
     /* Type checking */
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
